--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
