--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
